--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
 discord.py==0.16.12
-import asyncio
-import discord
-import discord.utils
-import datetime
-from parser import*
-from discord.ext import commands
+asyncio.py==3.4.3
